[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/C&C Red Alert [INET].ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.117647, 0.227451, 0.160784, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 3
corner_radius_bottom_right = 6
corner_radius_bottom_left = 3
corner_detail = 4
anti_aliasing = false

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelScores" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelScore" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -24.0
margin_right = 88.0
margin_bottom = -8.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="PanelScore"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
custom_colors/font_color = Color( 0.933333, 1, 0.8, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: 00000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelMaxScore" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -24.0
margin_right = -8.0
margin_bottom = -8.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxScore" type="Label" parent="PanelMaxScore"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
custom_colors/font_color = Color( 0.933333, 1, 0.8, 1 )
custom_fonts/font = SubResource( 1 )
text = "Max Score: 00000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelStart" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -40.0
margin_right = 64.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartText" type="Label" parent="PanelStart"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0.933333, 1, 0.8, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over
Press \"space\" to play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
